# src/api/api.go
@@ -46,6 +46,9 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 
 		countries := v1.Group("/countries", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		routers.Country(countries, cfg)
+
+		cities := v1.Group("/cities", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		routers.City(cities, cfg)
 	}
 }
 
